<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- item to start a new hand -->
    <!--<item-->
    <!--android:id="@+id/new_match"-->
    <!--android:icon="@drawable/ic_menu_btn_add"-->
    <!--android:title="@string/new_match"-->
    <!--app:showAsAction="ifRoom"-->
    <!--/>-->

    <item android:id = "@+id/manage_players"
        android:title="@string/manage_players_title"
        app:showAsAction="never"
        />

    <item android:id="@+id/manage_teams"
        android:title="Manage Teams"
        app:showAsAction="never"
        />

    <item android:id = "@+id/view_database"
        android:title="@string/db_viewer_description"
        app:showAsAction="never"
        />

    <item android:id = "@+id/change_dealer"
        android:title="@string/change_dealer"
        app:showAsAction="never"
        />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>