<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.geoffreyfrey.bidfivehundredscorekeeper.NewMatchFour">

        <include layout="@layout/my_toolbar"/>

        <TextView
            android:id="@+id/four_handed_title"
            style = "@style/TitleTextStyle"
            android:text = "@string/new_match_directions"
            android:textAllCaps="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MainTextStyle"
            android:text ="@string/new_match_directions2"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />

        <RelativeLayout
            android:id="@+id/four_handed_player_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/table_image"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/table"
                android:adjustViewBounds="true"
                android:layout_margin="30dp"
                />

            <AutoCompleteTextView
                android:id="@+id/player_one_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/table_image"
                android:layout_centerHorizontal="true"
                android:hint="@string/player_one_hint"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/player_two_name"
                />

            <AutoCompleteTextView
                android:id="@id/player_two_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:hint="@string/player_two_hint"
                android:rotation="90"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/player_three_name"
                />

            <AutoCompleteTextView
                android:id="@id/player_three_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/table_image"
                android:layout_centerHorizontal="true"
                android:hint="@string/player_three_hint"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/player_four_name"
                />

            <AutoCompleteTextView
                android:id="@id/player_four_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:rotation="270"
                android:hint="@string/player_four_hint"
                android:inputType="textCapWords"
                android:imeOptions="actionDone"
                />

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_match"
            android:onClick="startMatch"
            />

    </LinearLayout>
</ScrollView>